<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.jim.freepublicwifi.Information"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="73dp">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="54dp"
        android:id="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="@+id/activity_information"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintTop_toTopOf="@+id/activity_information"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_information"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_information"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:text="@string/public_free_wifi_greece"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="128dp"
        android:id="@+id/textView4"
        tools:text="Public free WiFi Greece"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/activity_information"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginTop="24dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_information"
        tools:layout_constraintRight_creator="0" />

    <TextView
        android:text="@string/uses_open_data"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="184dp"
        android:id="@+id/textView5"
        tools:text="This is an open source app that uses open data"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/activity_information"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_information"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginBottom="24dp"
        tools:layout_constraintBottom_creator="0"
        app:layout_constraintHorizontal_bias="0.54" />

    <TextView
        android:text="@string/developed_by_jim_kaltzidis"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="224dp"
        android:id="@+id/textView6"
        tools:text="Developed by Jim Kaltzidis"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/activity_information"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginTop="80dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_information"
        tools:layout_constraintRight_creator="0" />

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/github"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        app:fabSize="mini"
        android:onClick="gitHubButtonClicked"
        tools:layout_editor_absoluteX="516dp"
        tools:layout_editor_absoluteY="211dp"
        android:id="@+id/floatingActionButton"
        app:layout_constraintRight_toRightOf="@+id/activity_information"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_information"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0" />
</android.support.constraint.ConstraintLayout>
